<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="height">Height in cm</string>
    <string name="weight">Weight in kg</string>
    <string name="how_to">Willkommen bei FitnessTracker! \n
        Mit dieser innovativen und neuartigen App zum Tracken deiner Workouts
        kannst du deine im Sport verbrauchten Kalorien spielend leicht festhalten.
        Auf der Startseite kannst du deine Größe und dein aktuelles Körpergewicht angeben.
        Nach einem Workout wählst du auf der Add-Activity-Seite die ausgeübte Sportart aus
        und gibst die Dauer deines Trainings an. FitnessTracker wird dir anhand dieser Daten
        deine verbrauchten Kalorien berechnen. Dein Workout wird in die Datenbank übernommen und
        taucht in deiner History auf. Hier werden alle deine Workouts chronologisch angezeigt. Mit
        einem Swipe nach rechts oder links kannst du deine Workouts wieder aus der History löschen.
    </string>
    <string name="weekly_kcal">XXXX kcal</string>
    <string name="this_week_text">This week:</string>
    <string name="dashboard">Dashboard</string>
    <string name="nav_training">Training</string>
    <string name="nav_history">History</string>
    <string name="nav_howto">How to</string>
    <string name="hello_comma">Hello,</string>
    <string name="name">Benedict</string>
    <string name="consumed">Consumed calories:</string>
    <string name="add_workout">Add workout</string>
</resources>
