<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"

    />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="@android:color/holo_blue_light"
        >

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_week_text"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/kcal_text"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekly_kcal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="50sp"
            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15pt"
        android:paddingLeft="15pt"
        android:background="@drawable/customborder"

        >

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_marginRight="10pt"
            android:layout_gravity="center"
        />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_marginLeft="10pt"
            android:layout_gravity="center"
        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15pt"
        android:paddingLeft="15pt"
        >

        <EditText
            android:id="@+id/height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10pt"
            android:text="180"
            android:textSize="50sp"
            android:background="@android:color/transparent"
        />


        <EditText
            android:id="@+id/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="0pt"
            android:text="70"
            android:textSize="50sp"
            android:background="@android:color/transparent"
        />

    </LinearLayout>

</LinearLayout>