<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fitnesstracker.fragments.Dashboard"
    >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/gym"
        >

        <TextView
            android:id="@+id/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="0dp"
            android:text="@string/hello_comma"
            android:textSize="40sp"
            android:gravity="start"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/card_view"
            app:layout_constraintEnd_toStartOf="@id/name_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="Benedict"
            android:textSize="40sp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@id/dashboard"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/ex_mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_weight="1"
            android:text="!"
            android:textSize="40sp"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@id/name_edit"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorPrimary"

            app:cardCornerRadius="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard">

            <TextView
                android:id="@+id/week_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/this_week_text"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/kcal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:textColor="@color/colorWhite"
                android:text="@string/weekly_kcal"
                android:textSize="50sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/text_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            app:layout_constraintBottom_toTopOf="@id/number_linear"
            app:layout_constraintEnd_toEndOf="@+id/number_linear"
            app:layout_constraintStart_toStartOf="@id/number_linear"

            >

            <TextView
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/height"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/weight"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="180"
                android:textSize="50sp"
                android:inputType="number"

                />


            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="70"
                android:textSize="50sp"
                android:inputType="number"


                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
